client/src/static/index.css
body {
    padding: 0px;
    margin: 0px;
    scroll-behavior: smooth;
    overflow-x: hidden;
}


/* ---------------------Header Starts---------------------------- */

header {
    background-color: rgb(68, 138, 255);
    overflow: hidden;
    box-shadow: 0 15px 20px rgba(83, 109, 254, 0.3);
    /* font-family: 'Mali', cursive; */
    /* font-family: 'Rubik Mono One', sans-serif; */
    font-family: "Farro", sans-serif;
    font-weight: bolder;
    width: 100%;
}

header img {
    float: left;
    margin: 20px 10px 10px 10px;
}

header #brand {
    display: inline-block;
}

header #search {
    overflow: hidden;
    float: right;
}

header h1 {
    background-color: transparent;
    color: white;
    overflow: hidden;
    width: 230px;
    margin-top: 30px;
    display: inline-block;
    letter-spacing: 2px;
}

header input {
    float: right;
    margin: 30px 10px 0px 0px;
    height: 40px;
    width: 200px;
    font-size: 20px;
    color: rgba(0, 0, 0, 0.7);
    border: 1px solid white;
}

header button {
    margin-top: 30px;
    width: 85px;
    height: 40px;
    border: 1px solid white;
    /* background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%); */
    background-image: linear-gradient(to left, #00c6fb 0%, #005bea 100%);
    color: white;
    letter-spacing: 1px;
    font-family: "Varela Round", sans-serif;
    font-weight: bolder;
}


/* --------------------Menu Bar Starts----------------------*/

#menu {
    background-color: transparent;
    width: 70%;
    margin: auto;
    border-bottom: 1px solid rgba(68, 138, 255, 0.5);
}

#menu div {
    margin: auto;
    text-align: center;
}

#menu button {
    border: none;
    background-color: white;
    border-top: 8px solid rgb(68, 138, 255);
    letter-spacing: 2px;
    width: 100px;
    font-family: "Varela Round", sans-serif;
    font-weight: bolder;
    margin: 10px;
    border-radius: 3px;
    padding: 2px;
    box-shadow: 0 8px 12px rgba(83, 109, 254, 0.3);
    outline: none;
}

#menu button:hover {
    background-color: rgb(68, 138, 255);
    color: white;
    box-shadow: 0 15px 20px rgba(83, 109, 254, 0.3);
}


/*------------------------------Content area starts---------------------------------*/


/* #content {} */

.container {
    margin: auto;
}

.card {
    width: 40%;
    text-align: center;
    font-family: "Quicksand", sans-serif;
    color: rgba(0, 0, 0, 0.8);
    overflow: hidden;
    float: left;
    margin: 5%;
    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
    border-top: 6px solid rgb(68, 138, 255);
}

.card:hover {
    box-shadow: 0 25px 30px rgba(0, 0, 0, 0.4);
}

.card img {
    width: 90%;
}

.card h2 {
    font-family: "Varela Round", sans-serif;
    font-weight: bolder;
    height: 60px;
    overflow: hidden;
}

.card p {
    padding: 10px;
    width: 97%;
    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
    height: 30px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

.card span {
    padding: 5px;
    margin: 0px;
    float: left;
    margin-left: 20px;
    font-family: "Quicksand", sans-serif;
    font-weight: 400;
    color: rgba(0, 0, 0, 0.8);
}

#VMore {
    text-align: center;
    margin-bottom: 20px;
    width: 100%;
    display: inline-block;
}

#VMButton {
    margin: 10px 0px 0px 0px;
    width: 140px;
    height: 40px;
    border: 1px solid white;
    background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
    color: white;
    letter-spacing: 2px;
    font-family: "Rubik Mono One", sans-serif;
    text-align: center;
    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
}

#no_more {
    display: none;
}

#no_more_content {
    margin: auto;
    font-size: larger;
    text-align: center;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
    width: 200px;
    border-left: 5px solid rgb(83, 109, 254);
    border-right: 5px solid rgb(83, 109, 254);
    color: rgba(0, 0, 0, 0.6);
}

/*-----------------------------Footer Starts Here--------------------------------*/

#footer {
    overflow: hidden;
    color: white;
    width: inherit;
    display: block;
    margin: 0px;
    padding: 10px;
    font-family: "Abril Fatface", cursive;
    letter-spacing: 3px;
    /* background-color: rgb(83, 109, 254); */
    background-color: rgba(68, 138, 255, 0.8);
    text-align: center;
}

#footer img {
    margin: auto;
    border-radius: 20px;
    border: solid 2px white;
}

